[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/themes/cave-level/cave_level_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/LevelSelectScreens/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Controls/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/LevelSelectScreens/bg.png" type="Texture" id=4]
[ext_resource path="res://assets/art/tilesets/world2/stone-ground-tileset.tres" type="TileSet" id=5]
[ext_resource path="res://assets/art/tilesets/world2/roof-wall-tileset.tres" type="TileSet" id=7]
[ext_resource path="res://src/UI/FadeScreen/FadeScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UI/Controls/LoadingIndictator/LoadingIndicator.tscn" type="PackedScene" id=9]

[node name="World2LevelSelect" type="CanvasLayer"]
script = ExtResource( 2 )
this_world = 2

[node name="TileMapBg" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 65536, 0, 131072, 65537, 0, 131072, 65538, 0, 131072, 65539, 0, 131072, 65540, 0, 131072, 65541, 0, 131072, 65542, 0, 131072, 65543, 0, 131072, 65544, 0, 131072, 65545, 0, 131072, 65546, 0, 131072, 65547, 0, 131072, 65548, 0, 131072, 65549, 0, 131072, 65550, 0, 131072, 65551, 0, 131072, 65552, 0, 131072, 65553, 0, 131072, 65554, 0, 131072, 65555, 0, 131072, 65556, 0, 131072, 131072, 0, 196608, 131073, 1, 196608, 131074, 0, 196608, 131075, 1, 196608, 131076, 0, 196608, 131077, 0, 196608, 131078, 0, 196608, 131079, 0, 1638400, 131080, 0, 1638400, 131081, 0, 196608, 131082, 0, 196608, 131083, 0, 1638400, 131084, 0, 1638400, 131085, 0, 196608, 131086, 0, 196608, 131087, 0, 196608, 131088, 1, 196608, 131089, 0, 196608, 131090, 1, 196608, 131091, 0, 196608, 131092, 0, 196608, 196608, 1, 983040, 196609, 0, 196608, 196610, 0, 196608, 196611, 0, 196608, 196612, 0, 196608, 196613, 0, 196608, 196614, 0, 196608, 196615, 0, 196608, 196616, 0, 196608, 196617, 0, 196608, 196618, 0, 196608, 196619, 0, 196608, 196620, 0, 196608, 196621, 0, 196608, 196622, 1, 983040, 196623, 0, 196608, 196624, 0, 196608, 196625, 0, 196608, 196626, 0, 196608, 196627, 0, 196608, 196628, 0, 196608, 262144, 0, 196608, 262145, 1, 0, 262146, 0, 196608, 262147, 1, 0, 262148, 0, 196608, 262149, 0, 196608, 262150, 0, 196608, 262151, 0, 196608, 262152, 0, 196608, 262153, 0, 196608, 262154, 0, 196608, 262155, 0, 196608, 262156, 0, 196608, 262157, 0, 196608, 262158, 0, 196608, 262159, 0, 196608, 262160, 1, 0, 262161, 0, 196608, 262162, 1, 0, 262163, 0, 196608, 262164, 0, 196608, 327680, 0, 196608, 327681, 1, 65536, 327682, 0, 196608, 327683, 1, 65536, 327684, 0, 196608, 327685, 0, 196608, 327686, 0, 196608, 327687, 1, 983040, 327688, 0, 196608, 327689, 0, 196608, 327690, 0, 196608, 327691, 0, 196608, 327692, 0, 196608, 327693, 0, 196608, 327694, 0, 196608, 327695, 0, 196608, 327696, 1, 65536, 327697, 0, 196608, 327698, 1, 65536, 327699, 0, 196608, 327700, 0, 196608, 393216, 0, 196608, 393217, 0, 196608, 393218, 0, 196608, 393219, 0, 196608, 393220, 0, 196608, 393221, 0, 196608, 393222, 0, 196608, 393223, 0, 196608, 393224, 0, 196608, 393225, 0, 196608, 393226, 0, 196608, 393227, 0, 196608, 393228, 0, 196608, 393229, 0, 196608, 393230, 0, 196608, 393231, 0, 196608, 393232, 0, 196608, 393233, 0, 196608, 393234, 0, 196608, 393235, 1, 983040, 393236, 0, 196608, 458752, 0, 196608, 458753, 0, 196608, 458754, 0, 196608, 458755, 0, 196608, 458756, 1, 983040, 458757, 0, 196608, 458758, 0, 196608, 458759, 0, 196608, 458760, 0, 196608, 458761, 0, 196608, 458762, 0, 196608, 458763, 0, 196608, 458764, 0, 196608, 458765, 0, 196608, 458766, 0, 196608, 458767, 0, 196608, 458768, 0, 196608, 458769, 0, 196608, 458770, 0, 196608, 458771, 0, 196608, 458772, 0, 196608, 524288, 0, 196608, 524289, 0, 196608, 524290, 0, 196608, 524291, 0, 196608, 524292, 0, 196608, 524293, 0, 196608, 524294, 0, 196608, 524295, 0, 196608, 524296, 0, 196608, 524297, 0, 196608, 524298, 0, 196608, 524299, 0, 196608, 524300, 0, 196608, 524301, 0, 196608, 524302, 0, 196608, 524303, 0, 196608, 524304, 0, 196608, 524305, 0, 196608, 524306, 0, 196608, 524307, 0, 196608, 524308, 0, 196608 )

[node name="TileMapWorldStone" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 524288, 2, 65536, 524289, 2, 131072, 524306, 2, 393216, 524307, 2, 65536, 589824, 2, 720896, 589825, 2, 262144, 589826, 2, 65536, 589827, 2, 65536, 589828, 2, 65536, 589829, 2, 65536, 589830, 2, 65536, 589831, 2, 65536, 589832, 2, 65536, 589833, 2, 65536, 589834, 2, 65536, 589835, 2, 65536, 589836, 2, 65536, 589837, 2, 65536, 589838, 2, 65536, 589839, 2, 65536, 589840, 2, 65536, 589841, 2, 65536, 589842, 2, 524288, 589843, 2, 720896, 589844, 2, 720896, 655360, 2, 720896, 655361, 2, 720896, 655362, 2, 720896, 655363, 2, 720896, 655364, 2, 720896, 655365, 2, 720896, 655366, 2, 720896, 655367, 2, 720896, 655368, 2, 720896, 655369, 2, 720896, 655370, 2, 720896, 655371, 2, 720896, 655372, 2, 720896, 655373, 2, 720896, 655374, 2, 720896, 655375, 2, 720896, 655376, 2, 720896, 655377, 2, 720896, 655378, 2, 720896, 655379, 2, 720896, 655380, 2, 720896, 720896, 2, 720896, 720897, 2, 720896, 720898, 2, 720896, 720899, 2, 720896, 720900, 2, 720896, 720901, 2, 720896, 720902, 2, 720896, 720903, 2, 720896, 720904, 2, 720896, 720905, 2, 720896, 720906, 2, 720896, 720907, 2, 720896, 720908, 2, 720896, 720909, 2, 720896, 720910, 2, 720896, 720911, 2, 720896, 720912, 2, 720896, 720913, 2, 720896, 720914, 2, 720896, 720915, 2, 720896, 720916, 2, 720896 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="Control"]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 5.0
margin_right = 72.0
margin_bottom = 21.0
text = "Cave Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Control" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -20.0
next_scene_path = "res://src/UI/WorldSelectScreen/WorldSelect.tscn"

[node name="IntroButton" type="Button" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -9.0
margin_top = 23.0
margin_right = 9.0
margin_bottom = 41.0
text = "0"

[node name="LevelButtonsContainer" type="GridContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 99.0
margin_top = -34.0
margin_right = -99.0
margin_bottom = 22.0
custom_constants/vseparation = 15
custom_constants/hseparation = 34
columns = 3

[node name="BossButton" type="Button" parent="Control"]
margin_left = 139.0
margin_top = 119.0
margin_right = 181.0
margin_bottom = 137.0
text = "Boss"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingIndicator" parent="Control" instance=ExtResource( 9 )]
visible = false

[node name="Props" type="Node" parent="."]

[node name="FadeScreen" parent="." instance=ExtResource( 8 )]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 112.0
margin_top = 163.0
margin_right = 224.0
margin_bottom = 179.0
theme = ExtResource( 1 )
text = "Temp World 2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Control/IntroButton" to="." method="_on_IntroButton_button_up"]
[connection signal="button_up" from="Control/BossButton" to="." method="_on_BossButton_button_up"]
